--- a/Starter3D/Starter3D.Renderers/Starter3D.Renderers.csproj
+++ b/Starter3D/Starter3D.Renderers/Starter3D.Renderers.csproj
@@ -141,6 +141,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompositeRenderer.cs" />
     <Compile Include="Direct3DRenderer.cs" />
     <Compile Include="MatrixExtensions.cs" />
     <Compile Include="RendererFactory.cs" />
