Raytracer ported to HLSL

--- a/Starter3D/Starter3D.Plugin.PixelShader/Starter3D.Plugin.PixelShader.csproj
+++ b/Starter3D/Starter3D.Plugin.PixelShader/Starter3D.Plugin.PixelShader.csproj
@@ -126,12 +126,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="shaders\direct3d\pixelShaderVertex.hlsl">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="shaders\direct3d\mandelbrotFragment.hlsl">
+    <Content Include="shaders\direct3d\raytracerFragment.fx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
