--- a/Starter3D/Starter3D.Plugin.MaterialEditor/Starter3D.Plugin.MaterialEditor.csproj
+++ b/Starter3D/Starter3D.Plugin.MaterialEditor/Starter3D.Plugin.MaterialEditor.csproj
@@ -164,6 +164,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="shaders\direct3d\blinnPhongDiffuseTextureFragment.fx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="shaders\direct3d\blinnPhongFragment.fx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
