--- a/Starter3D/Starter3D.API.Test/Starter3D.API.Test.csproj
+++ b/Starter3D/Starter3D.API.Test/Starter3D.API.Test.csproj
@@ -64,12 +64,12 @@
     <Reference Include="Moq">
       <HintPath>..\packages\Moq.4.2.1506.2515\lib\net40\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="OpenTK">
+      <HintPath>..\libraries\OpenTK.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenTK">
-      <HintPath>..\Starter3D\Libraries\OpenTK.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
