Fix for depth buffer in d3d

--- a/Starter3D/Starter3D.Application/Starter3D.Application.csproj
+++ b/Starter3D/Starter3D.Application/Starter3D.Application.csproj
@@ -80,6 +80,10 @@
       <Project>{5407e771-ef7f-4b2c-8c75-a34720b2732f}</Project>
       <Name>Starter3D.Plugin.PixelShader</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Starter3D.Plugin.SimpleMaterialEditor\Starter3D.Plugin.SimpleMaterialEditor.csproj">
+      <Project>{c9d87433-bbff-40bb-99ea-9773636d3e11}</Project>
+      <Name>Starter3D.Plugin.SimpleMaterialEditor</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Starter3D.Renderers\Starter3D.Renderers.csproj">
       <Project>{78127754-23c1-4d69-a528-ae46cad6aec0}</Project>
       <Name>Starter3D.Renderers</Name>
