--- a/Starter3D/Starter3D.Renderers/Starter3D.Renderers.csproj
+++ b/Starter3D/Starter3D.Renderers/Starter3D.Renderers.csproj
@@ -179,4 +179,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="shaders\direct3d\" />
+  </ItemGroup>
 </Project>
