--- a/Starter3D/Starter3D.Plugin.SimpleMaterialEditor/Starter3D.Plugin.SimpleMaterialEditor.csproj
+++ b/Starter3D/Starter3D.Plugin.SimpleMaterialEditor/Starter3D.Plugin.SimpleMaterialEditor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A0CC8134-F678-4413-8135-A8BB09E1B6D8}</ProjectGuid>
+    <ProjectGuid>{C9D87433-BBFF-40BB-99EA-9773636D3E11}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Starter3D.Plugin.MaterialEditor</RootNamespace>
-    <AssemblyName>Starter3D.Plugin.MaterialEditor</AssemblyName>
+    <RootNamespace>Starter3D.Plugin.SimpleMaterialEditor</RootNamespace>
+    <AssemblyName>Starter3D.Plugin.SimpleMaterialEditor</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -65,16 +65,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MaterialEditorController.cs" />
-    <Compile Include="MaterialEditorView.xaml.cs">
-      <DependentUpon>MaterialEditorView.xaml</DependentUpon>
+    <Compile Include="SimpleMaterialEditorController.cs" />
+    <Compile Include="SimpleMaterialEditorView.xaml.cs">
+      <DependentUpon>SimpleMaterialEditorView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MaterialViewModel.cs" />
-    <Compile Include="NumericParameterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShapeViewModel.cs" />
-    <Compile Include="VectorParameterViewModel.cs" />
-    <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Starter3D.API\Starter3D.API.csproj">
@@ -83,7 +78,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="MaterialEditorView.xaml">
+    <Page Include="SimpleMaterialEditorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -98,10 +93,10 @@
     <Content Include="images\stones2.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\resources.xml">
+    <Content Include="resources\simpleResources.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="scenes\scene.xml">
+    <Content Include="scenes\simpleScene.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -137,15 +132,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="shaders\direct3d\blinnPhongSpecularDiffuseTextureFragment.fx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="shaders\direct3d\blinnPhongDiffuseTextureFragment.fx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="shaders\direct3d\blinnPhongFragment.fx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="shaders\opengl\blinnPhongDiffuseTextureFragment.glsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -161,32 +147,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="shaders\opengl\blinnPhongSpecularDiffuseTextureFragment.glsl">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="shaders\opengl\edwardsFragment.glsl">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="shaders\opengl\genericVertex.glsl">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="shaders\direct3d\edwardsFragment.fx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="shaders\opengl\shlickFragment.glsl">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="shaders\opengl\minnaertFragment.glsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -196,9 +157,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="shaders\direct3d\minnaertFragment.fx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Folder Include="shaders\direct3d\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
