--- a/Starter3D/Starter3D.Plugin.SimpleMaterialEditor/Starter3D.Plugin.SimpleMaterialEditor.csproj
+++ b/Starter3D/Starter3D.Plugin.SimpleMaterialEditor/Starter3D.Plugin.SimpleMaterialEditor.csproj
@@ -132,6 +132,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="shaders\direct3d\blinnPhongFragment.fx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="shaders\opengl\blinnPhongDiffuseTextureFragment.glsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -146,9 +149,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="shaders\direct3d\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
