--- a/Starter3D/Starter3D.Application/Starter3D.Application.csproj
+++ b/Starter3D/Starter3D.Application/Starter3D.Application.csproj
@@ -60,6 +60,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
     <WarningLevel>4</WarningLevel>
+    <DefineConstants>WIN64</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release2|x64'">
     <OutputPath>bin\x64\Release2\</OutputPath>
@@ -80,6 +81,14 @@
     <ProjectReference Include="..\Starter3D.Plugin.MaterialEditor\Starter3D.Plugin.MaterialEditor.csproj">
       <Project>{A0CC8134-F678-4413-8135-A8BB09E1B6D8}</Project>
       <Name>Starter3D.Plugin.MaterialEditor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Starter3D.Plugin.PixelShader\Starter3D.Plugin.PixelShader.csproj">
+      <Project>{5407e771-ef7f-4b2c-8c75-a34720b2732f}</Project>
+      <Name>Starter3D.Plugin.PixelShader</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Starter3D.Plugin.SimpleMaterialEditor\Starter3D.Plugin.SimpleMaterialEditor.csproj">
+      <Project>{c9d87433-bbff-40bb-99ea-9773636d3e11}</Project>
+      <Name>Starter3D.Plugin.SimpleMaterialEditor</Name>
     </ProjectReference>
     <ProjectReference Include="..\Starter3D.Renderers\Starter3D.Renderers.csproj">
       <Project>{78127754-23C1-4D69-A528-AE46CAD6AEC0}</Project>
