Partial implementation of scene graph for shapes

--- a/Starter3D/Starter3D.Application/Starter3D.Application.csproj
+++ b/Starter3D/Starter3D.Application/Starter3D.Application.csproj
@@ -72,9 +72,17 @@
       <Project>{3567CAD0-DE95-4BA8-98DE-750B75DCB45A}</Project>
       <Name>Starter3D.API</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Starter3D.Plugin.MaterialEditor\Starter3D.Plugin.MaterialEditor.csproj">
+      <Project>{a0cc8134-f678-4413-8135-a8bb09e1b6d8}</Project>
+      <Name>Starter3D.Plugin.MaterialEditor</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Starter3D.Plugin.PixelShader\Starter3D.Plugin.PixelShader.csproj">
       <Project>{5407e771-ef7f-4b2c-8c75-a34720b2732f}</Project>
       <Name>Starter3D.Plugin.PixelShader</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Starter3D.Plugin.SceneGraph\Starter3D.Plugin.SceneGraph.csproj">
+      <Project>{e9527f80-058f-43a5-a87f-00c8a7342f6d}</Project>
+      <Name>Starter3D.Plugin.SceneGraph</Name>
     </ProjectReference>
     <ProjectReference Include="..\Starter3D.Plugin.SimpleMaterialEditor\Starter3D.Plugin.SimpleMaterialEditor.csproj">
       <Project>{c9d87433-bbff-40bb-99ea-9773636d3e11}</Project>
