Initial implementation of picking

--- a/Starter3D/Starter3D.API/Starter3D.API.csproj
+++ b/Starter3D/Starter3D.API/Starter3D.API.csproj
@@ -111,6 +111,7 @@
     <Compile Include="scene\nodes\AmbientLight.cs" />
     <Compile Include="scene\nodes\BaseSceneNode.cs" />
     <Compile Include="scene\nodes\CameraNode.cs" />
+    <Compile Include="scene\nodes\InteractiveShapeNode.cs" />
     <Compile Include="scene\nodes\IRenderElement.cs" />
     <Compile Include="scene\persistence\factories\SceneDataNodeFactory.cs" />
     <Compile Include="scene\nodes\DirectionalLight.cs" />
