--- a/Starter3D/Starter3D.Plugin.SceneGraph/Starter3D.Plugin.SceneGraph.csproj
+++ b/Starter3D/Starter3D.Plugin.SceneGraph/Starter3D.Plugin.SceneGraph.csproj
@@ -99,6 +99,10 @@
     <Content Include="resources\scenegraphresources.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="scenes\interactivescenegraph.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="scenes\scenegraph.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
