Shape translation and scaling edition added

--- a/Starter3D/Starter3D.Plugin.SceneGraph/Starter3D.Plugin.SceneGraph.csproj
+++ b/Starter3D/Starter3D.Plugin.SceneGraph/Starter3D.Plugin.SceneGraph.csproj
@@ -67,11 +67,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InteractiveShapeViewModel.cs" />
+    <Compile Include="NumericParameterViewModel.cs" />
     <Compile Include="SceneGraphController.cs" />
     <Compile Include="SceneGraphView.xaml.cs">
       <DependentUpon>SceneGraphView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VectorParameterViewModel.cs" />
     <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
