2d line drawing in direct3d

--- a/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
+++ b/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
@@ -39,6 +39,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CurveEditorController.cs" />
+    <Compile Include="CurveEditorView.xaml.cs">
+      <DependentUpon>CurveEditorView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -56,7 +60,12 @@
       <Name>Starter3D.API</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="CurveEditorView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="resources\curveresources.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -66,7 +75,7 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="shaders\direct3d\mandelbrotFragment.fx">
+    <Content Include="shaders\direct3d\canvasFragment.fx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
