--- a/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
+++ b/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
@@ -48,11 +48,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CatmullRom.cs" />
+    <Compile Include="ClosedCatmullRom.cs" />
+    <Compile Include="CubicSpline.cs" />
     <Compile Include="CurveEditorController.cs" />
     <Compile Include="CurveEditorView.xaml.cs">
       <DependentUpon>CurveEditorView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="LinearSpline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spline.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Starter3D.API\Starter3D.API.csproj">
