--- a/Starter3D/Starter3D.API/Starter3D.API.csproj
+++ b/Starter3D/Starter3D.API/Starter3D.API.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="controller\IController.cs" />
+    <Compile Include="geometry\Circle.cs" />
     <Compile Include="geometry\ColorVertex.cs" />
     <Compile Include="geometry\Curve.cs" />
     <Compile Include="geometry\loaders\DxfMeshLoader.cs" />
