--- a/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
+++ b/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
@@ -25,7 +25,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;WIN64</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
