--- a/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
+++ b/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
@@ -55,9 +55,11 @@
     <Compile Include="CurveEditorView.xaml.cs">
       <DependentUpon>CurveEditorView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Bezier.cs" />
     <Compile Include="LinearSpline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spline.cs" />
+    <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Starter3D.API\Starter3D.API.csproj">
