Added point size and line width configuration for opengl

--- a/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
+++ b/Starter3D/Starter3D.Plugin.CurveEditor/Starter3D.Plugin.CurveEditor.csproj
@@ -56,9 +56,11 @@
       <DependentUpon>CurveEditorView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Bezier.cs" />
+    <Compile Include="ISpline.cs" />
     <Compile Include="LinearSpline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spline.cs" />
+    <Compile Include="SplineViewModel.cs" />
     <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
