Instancing implemented in D3D

--- a/Starter3D/Starter3D.API/Starter3D.API.csproj
+++ b/Starter3D/Starter3D.API/Starter3D.API.csproj
@@ -81,7 +81,9 @@
     <Compile Include="controller\IController.cs" />
     <Compile Include="geometry\ColorVertex.cs" />
     <Compile Include="geometry\Curve.cs" />
+    <Compile Include="geometry\IMeshCollection.cs" />
     <Compile Include="geometry\loaders\DxfMeshLoader.cs" />
+    <Compile Include="geometry\MeshCollection.cs" />
     <Compile Include="geometry\Points.cs" />
     <Compile Include="geometry\primitives\Cube.cs" />
     <Compile Include="geometry\primitives\IPrimitiveFactory.cs" />
