Simple instancing with position data per instance

--- a/Starter3D/Starter3D.Plugin.Physics/Starter3D.Plugin.Physics.csproj
+++ b/Starter3D/Starter3D.Plugin.Physics/Starter3D.Plugin.Physics.csproj
@@ -99,11 +99,7 @@
     <Content Include="resources\physics.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="scenes\physics.xml">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="scenes\scenegraph.xml">
+    <Content Include="scenes\physicsscene.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
