--- a/Starter3D/Starter3D.Plugin.Tessellation/Starter3D.Plugin.Tessellation.csproj
+++ b/Starter3D/Starter3D.Plugin.Tessellation/Starter3D.Plugin.Tessellation.csproj
@@ -72,6 +72,7 @@
       <DependentUpon>TessellationView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Starter3D.API\Starter3D.API.csproj">
@@ -151,7 +152,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="meshes\icosahedron.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
